[package]
name = "wow_ai_companion"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.30.0", features = ["default_fonts", "persistence"] }
egui_extras = { version = "0.30.0", features = ["all_loaders"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25.5", features = ["png"] }
directories = "5.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.5"